# diode

./: .coveragerc  .gitignore  .lintrunner.toml  CONTRIBUTING.md  DEPLOYMENT.md  LAUNCH_POST.md  Makefile  PACKAGING.md  README.md  TODO.md  build_docs.sh  fix_linters.py  matmul_dataset_exhaustive.json  mypy.ini  push_docs.sh  pypirc.template  pyproject-lib.toml  pyproject.toml  review_files.sh  setup_dev.sh  simple_matmul_dataset.json  systems_architecture_diagram.md  test_training.json  test_validation.json  test_validation_new.json  ultra_minimal_bug_reproduction.py
ci/: ci.sh  requirements-ci.txt
devops/: DEPLOYMENT.md  build_docs.sh  deploy.sh  deploy_to_pypi.py  get_model_manifest.py  push_docs.sh
diode/: README.md  __init__.py  __init___lib.py  training.py
diode-datasets/: pyproject.toml
diode-datasets/diode_datasets/: __init__.py
diode-datasets/diode_datasets/datasets/: example_shapeset.json  example_shapeset.py
diode-models/: pyproject.toml
diode-models/diode_models/: __init__.py  model_wrapper.py
diode/collection/: README.md  data_collection_utils.py  matmul_collection.py  matmul_collector.py  matmul_data_utils.py  matmul_dataset_collector.py
diode/integration/: README.md  __init__.py  base_integration.py  inductor_integration.py  matmul_integration.py  usage_example.py
diode/model/: __init__.py  directory_dataset_loader.py  matmul_dataset_loader.py  matmul_model_config.py  matmul_model_trainer.py  matmul_model_v1.py  matmul_timing_model.py  model_utils.py  model_wrapper.py
diode/types/: json_serializable.py  kernel_lut.py  matmul_dataset.py  matmul_types.py
diode/utils/: dataset_utils.py  visualization_utils.py
diode_common/: README.md  __init__.py  model_wrapper.py  pyproject.toml
diode_common/diode_common/: model_wrapper.py
diode_datasets/: README.md  pyproject.toml  shapes.txt
diode_datasets/diode_datasets/: __init__.py
diode_datasets/diode_datasets/datasets/: example_shapeset.py  operation_shapeset.json  small_op_shapes.json
diode_models/: __init__.py  model_wrapper.py  pyproject.toml
diode_models/diode_models/: __init__.py  model_wrapper.py
docs/: .buildinfo  .buildinfo.bak  Makefile  conf.py  data.md  docstring_guide.rst  genindex.html  getting_started.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  todo.rst  torch_compile_integration.html
docs/.doctrees/: getting_started.doctree  index.doctree  torch_compile_integration.doctree
docs/_modules/: diode.html  index.html
docs/_sources/: getting_started.rst.txt  index.rst.txt  torch_compile_integration.rst.txt
docs/api/: data.rst  diode.collection.html  diode.html  diode.model.html  diode.types.html  diode.utils.html  diode.utils.rst  index.rst  modules.html  types.rst
docs/articles/: contributing.html  packaging.html  readme.html  systems_architecture.html  workflows.html
docs_src/: Makefile  conf.py  docstring_examples.py  getting_started.rst  index.rst  torch_compile_integration.rst
docs_src/api/: diode.collection.rst  diode.model.rst  diode.rst  diode.types.rst  modules.rst
docs_src/articles/: contributing.md  packaging.md  workflows.md
examples/: README.md  create_max_autotune_solution.py  matmul_collect_and_train.py  matmul_collector_example.py  matmul_dataset_collector_example.py  matmul_max_autotune_validation.sh  matmul_model_example.py  matmul_toolkit.py  matmul_workflow.sh  simple_matmul_collect.py
heur/: __init__.py  models.py  training.py
heur/types/: matmul_types.py
tests/: __init__.py  conftest.py  test_init_functions.py  test_init_lib.py  test_init_lib_enhanced.py  test_kernel_lut.py  test_model_registry.py
tests/collection/: test_generic_data_utils.py  test_matmul_collector.py  test_matmul_data_utils.py  test_matmul_data_utils_enhanced.py  test_matmul_data_utils_simple.py  test_matmul_dataset_collector.py  test_matmul_dataset_collector_enhanced.py
tests/diode_models_only/: test_diode_models_standalone.py  test_model_wrapper_standalone.py
tests/examples/: test_matmul_toolkit.py
tests/integration/: README.md  __init__.py  pytest.ini  run_inductor_tests.py  test_base_integration.py  test_diode_compilation_e2e.py  test_diode_models_integration.py  test_diode_registration.py  test_enhanced_inductor_choices.py  test_inductor_integration.py  test_inductor_integration_end_to_end.py  test_inductor_integration_old.py  test_kernel_conversions.py  test_matmul_dataset_integration.py  test_matmul_integration.py  test_matmul_model_registration.py  test_model_wrapper_integration.py
tests/model/: test_directory_dataset_loader.py  test_matmul_dataset_loader.py  test_matmul_inference.py  test_matmul_model_trainer_enhanced.py  test_matmul_model_v1.py  test_matmul_timing_model.py  test_model_utils.py  test_model_utils_enhanced.py  test_model_utils_validate_max_autotune.py
tests/types/: test_kernel_lut.py  test_kernel_lut_2.py  test_kernel_lut_conversion.py  test_kernel_lut_integration.py  test_kernel_lut_lookup.py  test_kernel_lut_malformed_json.py  test_kernel_lut_serialization.py  test_kernel_lut_strategies.py  test_matmul_dataset.py  test_matmul_types.py  test_matmul_types_enhanced.py  test_matmul_types_parse_methods.py  test_matmul_types_simple.py  test_matmul_types_validation.py
tests/utils/: test_feature_extraction_enhanced.py  test_visualization_utils.py
tests/workflows/: test_matmul_toolkit.py
tools/linter/: README.md
torch_diode/: __init__.py  __init___lib.py  model_registry.py
torch_diode/collection/: README.md  generic_data_utils.py  matmul_data_utils.py  matmul_dataset_collector.py
torch_diode/integration/: README.md  __init__.py  base_integration.py  inductor_integration.py  kernel_conversions.py  matmul_integration.py
torch_diode/model/: __init__.py  directory_dataset_loader.py  (+9 more)
trained_models/: matmul_dataset_h100.json
workflows/: README.md  analyze_configs.py  create_max_autotune_solution.py  create_validation_based_max_autotune.py  matmul_dataset.json  matmul_max_autotune_validation.sh  matmul_toolkit.py  matmul_workflow.sh  max_autotune.json  max_autotune_shapes.csv
(+75 files in other folders)
