[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diode"
version = "0.1.0"
description = "A project with torch dependency"
authors = [
    {name = "Author Name", email = "author@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "mock>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "sphinx-copybutton>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/username/diode"
"Bug Tracker" = "https://github.com/username/diode/issues"
"Documentation" = "https://username.github.io/diode"

[tool.setuptools]
packages = ["diode"]
package-data = {diode = ["py.typed"]}
