[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diode"
version = "0.1.0"
description = "A toolkit for matrix multiplication data collection, model training, and evaluation"
authors = [
    {name = "Meta", email = "example@meta.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
]

[tool.setuptools]
packages = {find = {exclude = ["tests", "tests.*", "diode-models", "diode-models.*", "diode_common"]}}

[tool.setuptools.package-data]
diode = ["**/*.py"]
diode_common = ["**/*.py"]
