[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diode-datasets"
version = "0.1.0"
description = "Generated datasets from ourselves and the community for the diode package"
authors = [
    {name = "Meta", email = "example@meta.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.0.0",
    "diode>=0.1.0",
]

[project.optional-dependencies]
diode = []

[tool.setuptools]
packages = ["diode_datasets"]

[tool.setuptools.package-data]
diode_datasets = ["datasets/**/*.json"]
