[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diode-models"
version = "0.1.0"
description = "Pre-trained models for the diode package"
authors = [
    {name = "Meta", email = "example@meta.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[tool.setuptools]
packages = ["diode_models"]

[tool.setuptools.package-data]
diode_models = ["trained_models/**/*.pt", "trained_models/**/*.json"]
